@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-21T00:36:58Z",
+  "timestamp" : "2022-05-21T08:09:55Z",
   "count_outdated" : 22,
   "uniques_outdated" : 17,
-  "count" : 36,
-  "uniques" : 30,
+  "count" : 37,
+  "uniques" : 31,
   "clones" : [
     {
       "timestamp": "2022-05-08T00:00:00Z",
@@ -32,6 +32,13 @@
       "count_minmax": [ 2, 7 ],
       "uniques": 7,
       "uniques_minmax": [ 2, 7 ]
+    },
+    {
+      "timestamp": "2022-05-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
