@@ -1,6 +1,6 @@
 {
-  "count": 14,
-  "uniques": 10,
+  "count": 15,
+  "uniques": 11,
   "clones": [
     {
       "timestamp": "2022-05-08T00:00:00Z",
@@ -21,6 +21,11 @@
       "timestamp": "2022-05-20T00:00:00Z",
       "count": 7,
       "uniques": 7
+    },
+    {
+      "timestamp": "2022-05-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
