@@ -1,3 +1,10 @@
+2022-05-21T08:09:55Z:
+* notice: last 14d: unq all: 11 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 17 22 / 30 36
+* notice: next accum: outdated-unq outdated-all / unq all: 17 22 / 31 37
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: changed dates: [2022-05-21]
+
 2022-05-21T00:36:58Z:
 * notice: last 14d: unq all: 10 14
 * notice: prev accum: outdated-unq outdated-all / unq all: 17 22 / 26 32
